# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = mofdb_client
version = attr: mofdb_client.__version__
description = Simple client for fetching data from mofdb.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Nathaniel Tracy-Amoroso
author_email = n8@u.northwestern.edu
# maintainer =
# maintainer_email =
license = MIT License
license_file = LICENSE
# license_files = LICENSES/*
url = https://mof.tech.northwestern.edu
download_url = https://github.com/n8ta/mofdb-client
project_urls =
    Documentation = https://github.com/n8ta/mofdb-client#readme
    Issue Tracker = https://github.com/n8ta/mofdb-client/issues
    Source Code = https://github.com/n8ta/mofdb-client
keywords = mofdb, client
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # Programming Language :: Python :: 3.6 # EOL
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

platforms = any

[options]
python_requires = >=3.7
install_requires =
    requests >= 2.27.1
    responses >= 0.20.0
    dataclasses >= 0.6
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
# tests =
#   pytest
#   pytest-cov

# code =
#   flake8
