[metadata]
name = mofdb_client
version = 0.0.3
author = Nathaniel Tracy-Amoroso
author_email = n8@u.northwestern.edu
maintainer = Nathaniel Tracy-Amoroso
maintainer_email = n8@u.northwestern.edu
license = MIT License
license_file = LICENSE
description = Simple client for fetching data from mofdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/n8ta/mofdb
project_urls =
    MofDB = https://mof.tech.northwestern.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = mofdb, client, metal organic frameworks, chemistry,

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where = src