[metadata]
name = mofdb_client
version = 0.9.0
author = Nathaniel Tracy-Amoroso
author_email = n8@u.northwestern.edu
maintainer = Nathaniel Tracy-Amoroso
maintainer_email = n8@u.northwestern.edu
license = MIT License
license_file = LICENSE
description = Simple client for fetching data from mofdb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/n8ta/mofdb-client
project_urls =
    MofDB = https://mof.tech.northwestern.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = mofdb, client, metal organic frameworks, chemistry,

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    requests >= 2.20.1, < 3.0.0
    sentry-sdk >= 1.5.8, < 2.0.0
    stream_unzip >= 0.0.70, < 1.0.0

[options.packages.find]
where = src
